--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
+                    <div class="center">
+                    <a href="#" class="button" align="right">More Picture &gt;&gt;&gt; </a>
+                </div>
                 </div>
             </section>
 
