--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div class="center">
-                    <a href="#" class="button" align="right">More Picture &gt;&gt;&gt; </a>
+                    <a href="https://tasinsobhan.github.io/gallery/" class="button" align="right">More Picture &gt;&gt;&gt; </a>
                 </div>
                 </div>
             </section>
