--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Work</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="https://tasinsobhan.github.io/gallery/" class="nav__link">Gallery</a></li>
                     </ul>
                 </div>
 
@@ -189,9 +190,7 @@
                             <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
-                    <div class="center">
-                    <a href="https://tasinsobhan.github.io/gallery/" class="button" align="right">More Picture &gt;&gt;&gt; </a>
-                </div>
+                    
                 </div>
             </section>
 
