--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Work</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        <li class="nav__item"><a href="https://tasinsobhan.github.io/gallery/" class="nav__link">Gallery</a></li>
+                        <li class="nav__item"><a href="https://tasinsobhan.github.io/gallery/#gallery" class="nav__link">Gallery</a></li>
                     </ul>
                 </div>
 
