--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <input type="mail" placeholder="Email" class="contact__input">
                         </div>
 
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <textarea name="" id="" cols="0" rows="10" class="contact__input"placeholder="Message"></textarea>
 
                         <input type="submit" value="Send" class="contact__button">
                     </form>
